# StudyLangHelper

./: .dockerignore  .gitignore  LICENSE  PLAN.md  README.md  README_ENG.md  docker-compose.yml  pyproject.toml  studylanghelper.db
backend/: Dockerfile  config.py  database.py  deps.py  languages.py  llm.py  main.py  models.py  parsing.py  schemas.py  security.py  seed.py
backend/routers/: auth.py  dictionaries.py  library.py  llm.py  stats.py  study.py  words.py
frontend/: Dockerfile  api_client.py  app.py  config.py  i18n.py  state.py
frontend/pages/: cards.py  home.py  library.py  login.py  settings.py  upload.py
tests/: conftest.py
tests/api/: test_api.py
