[project]
name = "studylanghelper"
version = "0.1.0"
description = "StudyLangHelper — приложение для изучения иностранных языков (FastAPI + Streamlit)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
backend = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "pdfplumber>=0.11.0",
    "python-multipart>=0.0.9",
]
frontend = [
    "streamlit>=1.58.0",
    "httpx>=0.27.0",
    "plotly>=5.20.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "reportlab>=4.0.0",
]
local = [
    "studylanghelper[backend,frontend]",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]